# polaris

config/: all_workloads.yaml  ip_workloads.yaml  wl2archmapping.yaml
tests/test_ops/: test_activations.py  test_add.py  test_avgpool2d.py  test_batchnorm.py  test_batchnorm_new.py  test_bbox_center_decode.py  test_bbox_size_decode.py  test_clip.py  test_concat.py  test_conv.py  test_conv2d.py  test_conv_and_bn.py  test_div.py  test_dropout.py  test_eltwisebinary.py  test_eltwiseunary.py  test_exp.py  test_expand.py  test_gather.py  test_identity.py  test_layernorm.py  test_log.py  test_matmul.py  test_maxpool2d.py  test_meshgrid.py  test_mish.py  test_mul.py  test_pad.py  test_pooling.py  test_pow.py  test_quantize_dequantize_linear.py  test_reducemean.py  test_reductions.py  test_relu.py  test_relu6.py  test_reshape.py  test_slice.py  test_split.py  test_squeeze_unsqueeze.py  test_tile.py  (+2 more)
ttsim/back/tensix_neo/: t3sim.py  tensixFunc.py
ttsim/cpp/: CMakeLists.txt
ttsim/cpp/examples/: CMakeLists.txt  neo_sim_example.cpp
ttsim/cpp/include/neosim/config/: sim_config.hpp
ttsim/cpp/include/neosim/core/: neo_sim.hpp  tensix_core.hpp
ttsim/cpp/include/neosim/isa/: elf_loader.hpp  instruction.hpp
ttsim/cpp/include/neosim/risc/: trisc_func.hpp  trisc_mem_func.hpp  trisc_regs.hpp
ttsim/cpp/include/neosim/units/: mem_req.hpp  pipe_resource.hpp  pipe_unit.hpp  replay.hpp  risc_reg.hpp  rob.hpp  scratchpad.hpp  tensix_func.hpp  tensix_reg.hpp  tensix_spl_reg.hpp  thread_unit.hpp
ttsim/cpp/src/: CMakeLists.txt
ttsim/cpp/src/config/: CMakeLists.txt  sim_config.cpp
ttsim/cpp/src/core/: CMakeLists.txt  neo_sim.cpp  tensix_core.cpp
ttsim/cpp/src/isa/: CMakeLists.txt  elf_loader.cpp  instruction.cpp
ttsim/cpp/src/risc/: CMakeLists.txt  trisc_func.cpp  trisc_mem_func.cpp  trisc_regs.cpp
ttsim/cpp/src/units/: CMakeLists.txt  pipe_resource.cpp  pipe_unit.cpp  replay.cpp  risc_reg.cpp  rob.cpp  scratchpad.cpp  tensix_func.cpp  tensix_reg.cpp  tensix_spl_reg.cpp  thread_unit.cpp
ttsim/cpp/tests/integration/: CMakeLists.txt  test_neo_sim.cpp
ttsim/cpp/tests/unit/: CMakeLists.txt  test_instruction.cpp  test_pipe_resource.cpp  test_pipe_unit.cpp  test_replay.cpp  test_risc_reg.cpp  test_rob.cpp  test_scratchpad.cpp  test_tensix_func.cpp  test_tensix_reg.cpp  test_tensix_spl_reg.cpp  test_thread_unit.cpp  test_trisc_func.cpp  test_trisc_regs.cpp
ttsim/front/functional/: op.py  sim_nn.py
ttsim/front/onnx/: onnx2nx.py
ttsim/ops/desc/: __init__.py  data_compute.py  helpers.py  math.py  misc.py  nn.py  reduction.py  tensor.py
workloads/Retinanet/: anchor.py  model.py  retinanet_test.py  utils.py
workloads/Retinanet/reference/: torch_model.py
workloads/ScaledYOLOv4/: README.md
workloads/ScaledYOLOv4/models/: common.py  experimental.py  yolo.py
workloads/ScaledYOLOv4/models/utils/: general.py  utils.py
workloads/ScaledYOLOv4/reference/common/: bottleneck.py  bottleneck_csp.py  bottleneck_csp2.py  classify.py  comb_conv_layer.py  concat.py  conv.py  conv_layer.py  convsig.py  dwconv.py  dwconv_layer.py  flatten.py  focus.py  maxpool.py  results.md  run_all.py  spp.py  sppcsp.py  upsample.py  vovcsp.py
workloads/ScaledYOLOv4/reference/yolo/: detect.py  model.py  results.md  run_all.py
workloads/onnx/examples/: detr-onnx-dump.py  dump_yolov8_adi.py
